# Projet-MasterChefInfo

./: 1549943016.proj.DotSettings  CMakeLists.txt  Diagramme de classes.vpp  Diagramme de composants.vpp  Images.qrc  README.md  TaskThread.cpp  TaskThread.h  main.cpp  mainwindow.cpp  mainwindow.h
Controllers/classDeclaration/: DBController.h  MoveController.h  SocketController.h
Controllers/classDefinition/: DBController.cpp  MainController.cpp  MotionlessElementController.cpp  SocketController.cpp
Diagrammes_de_sequences/: Accueil et placement des clients.vpp  Gestion_stock_nettoyage.vpp  commande_service.vpp
src/Controllers/classDeclaration/: MainController.h  MotionlessElementController.h  SocketController.h
src/Controllers/classDefinition/: MainController.cpp  MoveController.cpp  SocketController.cpp
src/Models/classDeclaration/: ClientModel.h  DirtyDishesStorage.h  Human.h  Order.h  Server.h  Table.h  WashingMachine.h
src/Models/classDefinition/: Chief.cpp  ClientModel.cpp  DirtyDishesStorage.cpp  DishwasherModel.cpp  Human.cpp  RoomClerk.cpp  Table.cpp
src/MySQL/include/jdbc/cppconn/: driver.h
src/Vue/: mainview.cpp  mainwindow.cpp  table.cpp
